# storage/api-docs/api-docs.json
@@ -5147,6 +5147,50 @@
                 ]
             }
         },
+        "/api/term/number_instructors_term": {
+            "get": {
+                "tags": [
+                    "Term"
+                ],
+                "summary": "Number of instructors per term",
+                "operationId": "getNumberInstructorsPerTerm",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid status value"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
+        "/api/term/term_details": {
+            "get": {
+                "tags": [
+                    "Term"
+                ],
+                "summary": "Term details and sections",
+                "operationId": "getTermDetails",
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid status value"
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            }
+        },
         "/api/user/index": {
             "get": {
                 "tags": [
@@ -6013,6 +6057,16 @@
                         "bearer": []
                     }
                 ]
+            }
+        }
+    },
+    "components": {
+        "securitySchemes": {
+            "bearer": {
+                "type": "apiKey",
+                "description": "Enter token in format (Bearer <token>)",
+                "name": "Authorization",
+                "in": "header"
             }
         }
     }
